--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
