--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.17",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@tensorflow/tfjs-backend-cpu": "^3.20.0",
     "@tensorflow/tfjs-backend-wasm": "^3.20.0",
     "@tensorflow/tfjs-tflite": "^0.0.1-alpha.9",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@wavesurfer/react": "^1.0.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "wavesurfer.js": "^7.8.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
