--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@mediapipe/tasks-vision": "^0.10.17",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
+    "@techstark/opencv-js": "^4.10.0-release.1",
     "@tensorflow/tfjs-backend-cpu": "^3.20.0",
     "@tensorflow/tfjs-backend-wasm": "^3.20.0",
     "@tensorflow/tfjs-tflite": "^0.0.1-alpha.9",
+    "@types/d3-contour": "^3.0.6",
     "@types/three": "^0.169.0",
     "clsx": "^2.1.1",
+    "d3-contour": "^4.0.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
