--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,5 @@ dist-ssr
 #assets
 /public/models/personality-finder/*
 !/public/models/personality-finder/.gitkeep
-
+/public/models/skin-analysis/*
+!/public/models/skin-analysis/.gitkeep
