--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-rnd": "^10.4.13",
     "react-router-dom": "^6.27.0",
     "react-webcam": "^7.2.0",
     "three": "^0.169.0"
