--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/three": "^0.169.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
