--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-rnd": "^10.4.13",
     "react-router-dom": "^6.27.0",
     "react-webcam": "^7.2.0",
+    "recordrtc": "^5.6.2",
     "three": "^0.169.0"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/recordrtc": "^5.6.14",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
