--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-media-recorder": "^1.7.1",
     "react-rnd": "^10.4.13",
     "react-router-dom": "^6.27.0",
     "react-webcam": "^7.2.0",
