--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@mediapipe/tasks-vision": "^0.10.17",
     "@radix-ui/react-dialog": "^1.1.2",
     "@react-three/drei": "^9.114.3",
@@ -21,25 +23,36 @@
     "@tensorflow/tfjs-tflite": "^0.0.1-alpha.9",
     "@types/d3-contour": "^3.0.6",
     "@types/three": "^0.169.0",
+    "@wavesurfer/react": "^1.0.7",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.3.1",
+    "react-lottie-player": "^2.1.0",
     "react-media-recorder": "^1.7.1",
     "react-rnd": "^10.4.13",
     "react-router-dom": "^6.27.0",
+    "react-speech-recognition": "^3.10.0",
     "react-webcam": "^7.2.0",
     "recordrtc": "^5.6.2",
-    "three": "^0.169.0"
+    "regenerator-runtime": "^0.14.1",
+    "three": "^0.169.0",
+    "wavesurfer.js": "^7.8.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-speech-recognition": "^3.9.5",
     "@types/recordrtc": "^5.6.14",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
