--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "recordrtc": "^5.6.2",
     "regenerator-runtime": "^0.14.1",
     "three": "^0.169.0",
+    "vite-plugin-wasm": "^3.3.0",
     "wavesurfer.js": "^7.8.8"
   },
   "devDependencies": {
