--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-lottie-player": "^2.1.0",
     "react-media-recorder": "^1.7.1",
     "react-rnd": "^10.4.13",
