--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "howler": "^2.2.4",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
@@ -50,6 +51,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/howler": "^2.2.12",
     "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
