--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
+    "@react-three/offscreen": "^0.0.8",
     "@tanstack/react-query": "^5.59.15",
     "@techstark/opencv-js": "^4.10.0-release.1",
     "@tensorflow/tfjs-backend-cpu": "^3.20.0",
