--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "gltfpack": "^0.22.0",
     "howler": "^2.2.4",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
@@ -45,6 +46,7 @@
     "recordrtc": "^5.6.2",
     "regenerator-runtime": "^0.14.1",
     "three": "^0.169.0",
+    "three-stdlib": "^2.34.0",
     "vite-plugin-wasm": "^3.3.0",
     "wavesurfer.js": "^7.8.8"
   },
