--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@mediapipe/tasks-vision": "^0.10.20",
     "@radix-ui/react-dialog": "^1.1.2",
     "@react-three/drei": "^9.114.3",
@@ -19,10 +20,12 @@
     "@react-three/offscreen": "^0.0.8",
     "@tanstack/react-query": "^5.59.15",
     "@techstark/opencv-js": "^4.10.0-release.1",
-    "@tensorflow/tfjs-backend-cpu": "^3.20.0",
-    "@tensorflow/tfjs-backend-wasm": "^3.20.0",
-    "@tensorflow/tfjs-backend-webgl": "^3.20.0",
-    "@tensorflow/tfjs-tflite": "^0.0.1-alpha.9",
+    "@tensorflow-models/face-detection": "^1.0.3",
+    "@tensorflow-models/face-landmarks-detection": "^1.0.6",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@tensorflow/tfjs-converter": "^4.22.0",
+    "@tensorflow/tfjs-core": "^4.22.0",
     "@types/d3-contour": "^3.0.6",
     "@types/three": "^0.169.0",
     "@wavesurfer/react": "^1.0.7",
